k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service

    spec:
      containers:
      - name: auth-service
        image: nadzallafinalcloudacr.azurecr.io/auth-service:latest

        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service

metadata:
  name: auth-service

spec:
  selector:
    app: auth-service

  ports:
  - port: 5001
    targetPort: 5001

  type: ClusterIP
