k8s/delivery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: delivery-service

  template:
    metadata:
      labels:
        app: delivery-service

    spec:
      containers:
      - name: delivery-service
        image: nadzallafinalcloudacr.azurecr.io/delivery-service:latest

        ports:
        - containerPort: 8086

---
apiVersion: v1
kind: Service

metadata:
  name: delivery-service

spec:
  selector:
    app: delivery-service

  ports:
  - port: 8086
    targetPort: 8086

  type: ClusterIP
