k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:
      - name: api-gateway
        image: nadzallafinalcloudacr.azurecr.io/api-gateway:latest

        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service

metadata:
  name: api-gateway

spec:
  selector:
    app: api-gateway

  ports:
  - port: 8080
    targetPort: 8080

  type: LoadBalancer
