k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: notification-service

  template:
    metadata:
      labels:
        app: notification-service

    spec:
      containers:
      - name: notification-service
        image: nadzallafinalcloudacr.azurecr.io/notification-service:latest

        ports:
        - containerPort: 8088

---
apiVersion: v1
kind: Service

metadata:
  name: notification-service

spec:
  selector:
    app: notification-service

  ports:
  - port: 8088
    targetPort: 8088

  type: ClusterIP
