k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: payment-service

  template:
    metadata:
      labels:
        app: payment-service

    spec:
      containers:
        - name: payment-service
          image: nadzallafinalcloudacr.azurecr.io/payment-service:latest

          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service

metadata:
  name: payment-service

spec:
  selector:
    app: payment-service

  ports:
    - port: 8082
      targetPort: 8082

  type: ClusterIP
