k8s/pickup-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pickup-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: pickup-service

  template:
    metadata:
      labels:
        app: pickup-service

    spec:
      containers:
      - name: pickup-service
        image: nadzallafinalcloudacr.azurecr.io/pickup-service:latest

        ports:
        - containerPort: 8083

---
apiVersion: v1
kind: Service

metadata:
  name: pickup-service

spec:
  selector:
    app: pickup-service

  ports:
  - port: 8083
    targetPort: 8083

  type: ClusterIP
