k8s/shipment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipment-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: shipment-service

  template:
    metadata:
      labels:
        app: shipment-service

    spec:
      containers:
      - name: shipment-service
        image: nadzallafinalcloudacr.azurecr.io/shipment-service:latest

        ports:
        - containerPort: 8084

---
apiVersion: v1
kind: Service

metadata:
  name: shipment-service

spec:
  selector:
    app: shipment-service

  ports:
  - port: 8084
    targetPort: 8084

  type: ClusterIP
