k8s/tracking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tracking-service

  template:
    metadata:
      labels:
        app: tracking-service

    spec:
      containers:
      - name: tracking-service
        image: nadzallafinalcloudacr.azurecr.io/tracking-service:latest

        ports:
        - containerPort: 8087

---
apiVersion: v1
kind: Service

metadata:
  name: tracking-service

spec:
  selector:
    app: tracking-service

  ports:
  - port: 8087
    targetPort: 8087

  type: ClusterIP
