k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: finalcloud-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:

      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: api-gateway

            port:
              number: 8080
